--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-coffee": "~0.6.4",
-    "grunt-contrib-compass": "~0.1.3"
+    "grunt-contrib-compass": "~0.1.3",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-watch": "~0.3.1"
   }
 }
