fixing wrong package.json url

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/comffee"
+    "url": "https://github.com/tiagoamaro/comffee"
   },
   "licenses": [
     {
