--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "comffee",
   "description": "SCSS, CoffeScript and Compass united",
   "version": "0.1.0",
-  "author": "Tiago Amaro (https://github.com/tiagoamaro)",
-  "homepage": "",
+  "author": "Tiago Amaro",
+  "homepage": "http://www.tiagoamaro.com.br",
   "repository": {
     "type": "git",
     "url": "https://github.com/tiagoamaro/comffee"
