--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-coffee": "~0.6.4",
     "grunt-contrib-compass": "~0.1.3",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-watch": "~0.3.1"
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-contrib-jasmine": "~0.4.2"
   }
 }
