Changing package.json description

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comffee-grunt",
-  "description": "SCSS, CoffeScript and Compass united",
+  "description": "Grunt, SCSS, CoffeScript and Compass united",
   "version": "0.1.0",
   "author": "Tiago Amaro",
   "homepage": "http://www.tiagoamaro.com.br",
